k8s/base/realtime-socket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtime-socket
  namespace: cab-booking
spec:
  selector:
    app: realtime-socket
  ports:
    - name: http
      port: 3011
      targetPort: 3011
  type: ClusterIP
