k8s/base/ride-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ride-service
  namespace: cab-booking
spec:
  selector:
    app: ride-service
  ports:
    - name: http
      port: 3009
      targetPort: 3009
  type: ClusterIP
